Fix minor layout issues

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -42,6 +42,14 @@ a {
   text-decoration: none;
 }
 
+textarea,
+input[type="text"],
+input[type="button"],
+input[type="submit"] {
+  -webkit-appearance: none;
+  border-radius: 0;
+}
+
 /* ---------------------------------------------------------------- */
 /* REUSABLE COMPONENTS */
 /* ---------------------------------------------------------------- */
@@ -153,11 +161,11 @@ header {
           display: block;
           text-transform: uppercase;
           font-size: 1rem;
-          padding: 0 5px;
+          padding: 10px 5px;
           transition: all 0.5s;
 
           @media (min-width: 767px) {
-            padding: 0 10px;
+            padding: 10px;
           }
 
           &:hover {
@@ -206,8 +214,10 @@ header {
     background-color: rgba(31, 31, 31, 0.85);
     position: relative;
     border-radius: 5px;
+    margin: 0 10px;
     top: 50px;
     padding: 20px 30px;
+    text-align: center;
   }
 
   .profile-image {
@@ -646,7 +656,11 @@ header {
   .column {
     float: left;
     padding: 10px;
-    width: 50%;
+    width: 100%;
+
+    @media (min-width: 767px) {
+      width: 50%;
+    }
   }
 
   .day {
